# cognitive-coding-engagement-prepare-main

./: .gitattributes  .gitignore  CLAUDE.md  COMMAND.md  README.md  pyproject.toml
src/: a_video_to_audio.py  b_speaker_diarization.py  batch.py  c_automatic_speech_recognition.py  d_crowd_detect.py  e_extract_frames.py  e_merge_results.py  f_image_understanding.py  g_merge_results.py  gpt_client.py  run_tasks_pipeline.py
